--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,32 +5,53 @@ authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay
 categories = ["encoding", "parser-implementations", "no-std"]
 description = "A JSON serialization file format"
 documentation = "https://docs.rs/serde_json"
-edition = "2021"
+edition = "2024"
 keywords = ["json", "serde", "serialization"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/serde-rs/json"
-rust-version = "1.71"
+rust-version = "1.93.0"
+
+[workspace]
+members = [".", "tests/crate"]
+exclude = ["fuzz"]
+
+[workspace.dependencies]
+automod = { version = "1.0.16" }
+indexmap = { version = "2.13.0" }
+indoc = { version = "2.0.7" }
+itoa = { version = "1.0" }
+memchr = { version = "2", default-features = false }
+ref-cast = { version = "1.0.25" }
+rustversion = { version = "1.0.22" }
+serde = { version = "1.0.228", default-features = false, features = ["derive"] }
+serde_bytes = { version = "0.11.19" }
+serde_core = { version = "1.0.228", default-features = false }
+serde_derive = { version = "1.0.228" }
+serde_json = { path = ".", default-features = false }
+serde_stacker = { version = "0.1.14" }
+trybuild = { version = "1.0.116", features = ["diff"] }
+zmij = { version = "1.0" }
 
 [dependencies]
-indexmap = { version = "2.2.3", optional = true }
-itoa = "1.0"
-memchr = { version = "2", default-features = false }
-serde_core = { version = "1.0.220", default-features = false }
-zmij = "1.0"
+indexmap = { workspace = true, optional = true }
+itoa = { workspace = true }
+memchr = { workspace = true }
+serde_core = { workspace = true }
+zmij = { workspace = true }
 
 [target.'cfg(any())'.dependencies]
-serde = { version = "1.0.220", default-features = false }
+serde = { workspace = true }
 
 [dev-dependencies]
-automod = "1.0.11"
-indoc = "2.0.2"
-ref-cast = "1.0.18"
-rustversion = "1.0.13"
-serde = { version = "1.0.194", features = ["derive"] }
-serde_bytes = "0.11.10"
-serde_derive = "1.0.166"
-serde_stacker = "0.1.8"
-trybuild = { version = "1.0.108", features = ["diff"] }
+automod = { workspace = true }
+indoc = { workspace = true }
+ref-cast = { workspace = true }
+rustversion = { workspace = true }
+serde = { workspace = true }
+serde_bytes = { workspace = true }
+serde_derive = { workspace = true }
+serde_stacker = { workspace = true }
+trybuild = { workspace = true }
 
 [package.metadata.docs.rs]
 features = ["preserve_order", "raw_value", "unbounded_depth"]
@@ -45,6 +66,12 @@ rustdoc-args = [
 
 [package.metadata.playground]
 features = ["float_roundtrip", "raw_value", "unbounded_depth"]
+
+
+[patch.crates-io]
+serde = { path = "../serde/serde" }
+serde_core = { path = "../serde/serde_core" }
+serde_derive = { path = "../serde/serde_derive" }
 
 
 ### FEATURES #################################################################
