--- a/tests/crate/Cargo.toml
+++ b/tests/crate/Cargo.toml
@@ -2,14 +2,14 @@
 name = "serde_json_test"
 version = "0.0.0"
 authors = ["David Tolnay <dtolnay@gmail.com>"]
-edition = "2021"
+edition = "2024"
 publish = false
 
 [lib]
 path = "test.rs"
 
 [dependencies]
-serde_json = { path = "../..", default-features = false }
+serde_json = { workspace = true }
 
 [features]
 default = ["std"]
